--- a/roulette.html
+++ b/roulette.html
@@ -1,212 +1,110 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Zombie Lord | Strategic Engine</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@700;900&family=JetBrains+Mono:wght@400;700&display=swap');
-        :root { --bg: #020617; --emerald: #10b981; --blood: #ef4444; }
-        body {
-            background-color: var(--bg);
-            background-image: linear-gradient(to bottom, rgba(2, 6, 23, 0.9), rgba(2, 6, 23, 0.98)), 
-                              url('https://zomb13lord.github.io/zombielords-playhouse/background.png');
-            background-size: cover; background-attachment: fixed;
-            color: #f8fafc; font-family: 'JetBrains Mono', monospace;
-        }
-        .cinzel { font-family: 'Cinzel', serif; }
-        .emerald-text { color: var(--emerald); text-shadow: 0 0 10px rgba(16, 185, 129, 0.4); }
-        .config-input { background: rgba(0, 0, 0, 0.7); border: 1px solid rgba(16, 185, 129, 0.3); color: white; padding: 12px; border-radius: 4px; width: 100%; outline: none; }
-        .btn-zombie { background: transparent; border: 1px solid var(--emerald); color: var(--emerald); padding: 12px 24px; text-transform: uppercase; font-weight: bold; cursor: pointer; transition: 0.3s; }
-        .btn-zombie:hover { background: var(--emerald); color: #000; box-shadow: 0 0 20px rgba(16, 185, 129, 0.4); }
-        .shard { background: rgba(15, 23, 42, 0.9); border: 1px solid rgba(16, 185, 129, 0.2); backdrop-filter: blur(16px); -webkit-backdrop-filter: blur(16px); }
-    </style>
-</head>
-<body class="p-4 md:p-8">
-
-    <nav class="flex justify-between items-center mb-8 bg-slate-950/60 p-4 border border-emerald-900/20 backdrop-blur-md sticky top-0 z-40">
-        <h2 class="cinzel emerald-text text-sm tracking-widest uppercase">System_Vault</h2>
-        <div class="flex gap-4">
-            <button onclick="window.location.href='lobby.html'" class="text-[9px] uppercase font-bold text-slate-400">Lobby</button>
-            <button onclick="triggerLogout()" class="text-[9px] uppercase font-bold text-blood">Abandon</button>
-        </div>
-    </nav>
-
-    <div id="entry-portal" class="fixed inset-0 z-50 flex items-center justify-center bg-slate-950/98 hidden">
-        <div class="max-w-md w-full p-10 shard rounded-sm text-center">
-            <h1 class="cinzel text-4xl emerald-text mb-2 uppercase">The_Vault</h1>
-            <p class="text-[9px] text-slate-500 tracking-[0.4em] mb-12 uppercase">Accessing User Memory</p>
-            <div class="flex flex-col gap-6">
-                <button onclick="showConfig()" class="btn-zombie text-lg">New Trial</button>
-                <button onclick="toggleArchiveList(true)" class="btn-zombie border-slate-600 text-slate-400 hover:border-emerald-500 hover:text-emerald-500">Load Archives</button>
+<div id="config-page" class="shard p-10 max-w-5xl mx-auto shadow-2xl border border-emerald-900/20">
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+        
+        <div class="space-y-4">
+            <h3 class="text-[10px] cinzel text-emerald-500 tracking-[.3em] border-b border-emerald-900/30 pb-2">01_WHEEL_ARCHITECTURE</h3>
+            <div>
+                <label class="config-label">Wheel Type</label>
+                <select id="wheel-type" class="config-input" onchange="syncWheelSubtypes()">
+                    <option value="EU">European (37 Pockets)</option>
+                    <option value="US">American (38 Pockets)</option>
+                    <option value="TZ">Triple Zero (39 Pockets)</option>
+                </select>
+            </div>
+            <div>
+                <label class="config-label">Wheel Subtype</label>
+                <select id="wheel-subtype" class="config-input"></select>
             </div>
         </div>
-    </div>
 
-    <div id="archive-portal" class="fixed inset-0 z-[55] flex items-center justify-center bg-black/90 backdrop-blur-xl hidden">
-        <div class="max-w-2xl w-full p-8 shard rounded-sm">
-            <div class="flex justify-between items-center mb-6 border-b border-emerald-900/30 pb-4">
-                <h2 class="cinzel text-2xl emerald-text uppercase">Stored_Nodes</h2>
-                <button onclick="toggleArchiveList(false)" class="text-slate-500 hover:text-white text-xl">✕</button>
-            </div>
-            <div id="session-list" class="space-y-3 max-h-[60vh] overflow-y-auto pr-2"></div>
-        </div>
-    </div>
-
-    <div id="name-modal" class="fixed inset-0 z-[70] flex items-center justify-center bg-black/95 backdrop-blur-md hidden">
-        <div class="max-w-sm w-full p-8 shard text-center">
-            <h2 id="modal-title" class="cinzel text-xl emerald-text mb-2 uppercase">Sync_Node</h2>
-            <input type="text" id="session-name" placeholder="NODE_NAME" class="config-input mb-6 text-center uppercase tracking-widest">
-            <div class="flex flex-col gap-3">
-                <button id="modal-confirm-btn" class="btn-zombie">Commit</button>
-                <button onclick="closeNameModal()" class="text-[9px] text-slate-500 uppercase">Return</button>
-            </div>
-        </div>
-    </div>
-
-    <div id="config-page" class="hidden max-w-4xl mx-auto">
-        <div class="shard p-10">
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-                <div class="md:col-span-2 border-b border-emerald-900/30 pb-2 mb-4">
-                    <span class="text-[10px] cinzel text-emerald-500 font-bold tracking-widest uppercase font-black">Calibration_Node</span>
+        <div class="space-y-4">
+            <h3 class="text-[10px] cinzel text-emerald-500 tracking-[.3em] border-b border-emerald-900/30 pb-2">02_DOMAIN_PROTOCOL</h3>
+            <div class="grid grid-cols-2 gap-4">
+                <div>
+                    <label class="config-label">Domain</label>
+                    <select id="main-domain" class="config-input" onchange="syncSubCategories()">
+                        <option value="inside">Inside</option>
+                        <option value="outside">Outside</option>
+                        <option value="sectors">Sectors</option>
+                    </select>
                 </div>
-                <div><label class="text-[9px] uppercase font-bold text-emerald-500 block mb-2">Wheel</label><select id="wheel-type" class="config-input"><option value="EU">European</option><option value="US">American</option><option value="TZ">Triple Zero</option></select></div>
-                <div><label class="text-[9px] uppercase font-bold text-emerald-500 block mb-2">Main Domain</label><select id="main-domain" class="config-input" onchange="updateSubDomains()"><option value="inside">Inside</option><option value="outside">Outside</option></select></div>
-                <div><label class="text-[9px] uppercase font-bold text-emerald-500 block mb-2">Category</label><select id="sub-domain" class="config-input" onchange="updateSubTypes()"></select></div>
-                <div><label class="text-[9px] uppercase font-bold text-emerald-500 block mb-2">Protocol</label><select id="sub-type" class="config-input"></select></div>
-                <div><label class="text-[9px] uppercase font-bold text-emerald-500 block mb-2">Unit</label><input type="number" id="base-unit" class="config-input" value="1" step="0.1"></div>
-                <div class="md:col-span-2 mt-8"><button onclick="saveAndLaunch()" class="btn-zombie w-full tracking-[0.4em]">Initialize_Node</button></div>
+                <div>
+                    <label class="config-label">Sub-Category</label>
+                    <select id="sub-category" class="config-input" onchange="syncSubTypes()"></select>
+                </div>
+            </div>
+            <div>
+                <label class="config-label">Protocol (Subtype)</label>
+                <select id="sub-type" class="config-input" onchange="toggleSpecialInputs()"></select>
             </div>
         </div>
+
+        <div id="neighbor-size-box" class="hidden md:col-span-2 bg-emerald-950/20 p-4 border border-emerald-500/20 rounded">
+            <label class="config-label text-emerald-400">Neighbor Size (S)</label>
+            <input type="number" id="neighbor-size" class="config-input w-24" value="1" min="1" max="18">
+            <span class="text-[9px] ml-4 text-slate-400 italic font-mono uppercase tracking-widest">Calculated_Span: 1 + (S x 2) Pockets</span>
+        </div>
     </div>
+</div>
 
-    <div id="tracker-temp" class="hidden flex flex-col items-center justify-center min-h-[60vh] text-center">
-        <h1 class="cinzel text-6xl emerald-text animate-pulse mb-8 uppercase">Live_Node</h1>
-        <div id="sync-info" class="bg-black/40 p-6 border border-emerald-950/50 text-[10px] text-slate-400 uppercase tracking-[0.3em] mb-12"></div>
-        <button onclick="showConfig()" class="btn-zombie">Settings</button>
-    </div>
+<script>
+// ITEM 1: WHEEL DATA (LOCKED)
+const wheelMap = {
+    "EU": ["Standard", "French"],
+    "US": ["Standard"],
+    "TZ": ["Standard (Sands/Venetian)", "EU Layout", "US Layout"]
+};
 
-    <script>
-        const firebaseConfig = { apiKey: "AIzaSyBSUXdz7HqwkENhQqEJLItxYm-LAwkgbmY", authDomain: "zombielords-playhouse.firebaseapp.com", projectId: "zombielords-playhouse", storageBucket: "zombielords-playhouse.firebasestorage.app", messagingSenderId: "795162260246", appId: "1:795162260246:web:97f0361751ac1359b31637" };
-        firebase.initializeApp(firebaseConfig);
-        const auth = firebase.auth(); const db = firebase.firestore();
-        let currentUser = null; let currentActiveData = null; let editingSessionId = null;
+// ITEM 2: DOMAIN DATA (LOCKED)
+const domainMap = {
+    "inside": {
+        "Straight Up": ["Single Number"],
+        "Splits": ["Standard (Horizontal)", "Vertical", "Both"],
+        "Streets": ["Standard", "Baskets", "Top Line"],
+        "Corners": ["Standard (Squares)"],
+        "Lines": ["Standard", "All", "Top Line"]
+    },
+    "outside": {
+        "Dozens/Columns": ["Dozens", "Columns", "Both"],
+        "Even Money": ["Red/Black", "Odd/Even", "High/Low"]
+    },
+    "sectors": {
+        "Racetrack": ["Zero Game", "Voisins", "Orphelins", "Tier"],
+        "Neighbors": ["Size (S)"],
+        "Heat Map": ["Dynamic Cluster"]
+    }
+};
 
-        const lockedMap = {
-            inside: { lines: ["6-Line Hybrid", "Double Line"], streets: ["3-Street", "Cold Hunt"], splits: ["Corner Split", "Vertical"], baskets: ["0-1-2-3 Basket"] },
-            outside: { dozens: ["Single Dozen", "Double"], columns: ["Standard", "Switch"], even_money: ["Red/Black", "Odd/Even"] }
-        };
+function syncWheelSubtypes() {
+    const type = document.getElementById('wheel-type').value;
+    const subSelect = document.getElementById('wheel-subtype');
+    subSelect.innerHTML = wheelMap[type].map(s => `<option value="${s}">${s}</option>`).join('');
+}
 
-        auth.onAuthStateChanged(user => {
-            if (!user) window.location.href = "index.html";
-            else { currentUser = user; document.getElementById('entry-portal').classList.remove('hidden'); }
-        });
+function syncSubCategories() {
+    const domain = document.getElementById('main-domain').value;
+    const catSelect = document.getElementById('sub-category');
+    catSelect.innerHTML = Object.keys(domainMap[domain]).map(c => `<option value="${c}">${c}</option>`).join('');
+    syncSubTypes();
+}
 
-        // Initialize listeners once DOM is ready to prevent White Screen crash
-        document.addEventListener('DOMContentLoaded', () => {
-            const nameInput = document.getElementById('session-name');
-            if (nameInput) {
-                nameInput.addEventListener('keypress', (e) => {
-                    if (e.key === 'Enter') {
-                        const title = document.getElementById('modal-title').innerText;
-                        title.includes('RENAME') ? confirmRename() : confirmArchive();
-                    }
-                });
-            }
-        });
+function syncSubTypes() {
+    const domain = document.getElementById('main-domain').value;
+    const cat = document.getElementById('sub-category').value;
+    const subSelect = document.getElementById('sub-type');
+    subSelect.innerHTML = domainMap[domain][cat].map(t => `<option value="${t}">${t}</option>`).join('');
+    toggleSpecialInputs();
+}
 
-        async function deleteSession(id) {
-            const el = document.querySelector(`[data-id="${id}"]`);
-            if (el) el.style.opacity = "0.3";
-            await db.collection("users").doc(currentUser.uid).collection("sessions").doc(id).delete();
-            refreshArchiveList();
-        }
+function toggleSpecialInputs() {
+    const cat = document.getElementById('sub-category').value;
+    const box = document.getElementById('neighbor-size-box');
+    cat === "Neighbors" ? box.classList.remove('hidden') : box.classList.add('hidden');
+}
 
-        async function refreshArchiveList() {
-            const listDiv = document.getElementById('session-list');
-            listDiv.innerHTML = '<p class="text-[9px] animate-pulse text-slate-500 uppercase">Polling Vault...</p>';
-            const snapshot = await db.collection("users").doc(currentUser.uid).collection("sessions").orderBy("timestamp", "desc").get();
-            listDiv.innerHTML = '';
-            snapshot.forEach(doc => {
-                const data = doc.data();
-                const sessionEl = document.createElement('div');
-                sessionEl.className = "flex items-center gap-2 mb-2";
-                sessionEl.setAttribute('data-id', doc.id);
-                sessionEl.innerHTML = `
-                    <button class="flex-grow text-left p-4 border border-slate-800 hover:border-emerald-500/50 text-[10px] uppercase bg-black/40 transition-all flex justify-between items-center" onclick='loadSession(${JSON.stringify(data)})'>
-                        <div>${doc.id === "active_session" ? "<span class='text-blood mr-2'>[ACTIVE]</span>" : ""}<span class="text-emerald-500 font-bold tracking-widest">${data.name || 'UNNAMED'}</span></div>
-                        <span class="text-slate-600 text-[8px]">${new Date(data.timestamp?.seconds * 1000).toLocaleDateString()}</span>
-                    </button>
-                    <button class="p-4 border border-slate-800 text-slate-500 hover:text-emerald-500 hover:border-emerald-500" onclick='triggerRename("${doc.id}", "${data.name}")'>✎</button>
-                    <button class="p-4 border border-slate-800 text-slate-500 hover:text-blood hover:border-blood" onclick='deleteSession("${doc.id}")'>✕</button>
-                `;
-                listDiv.appendChild(sessionEl);
-            });
-        }
-
-        function triggerRename(id, oldName) {
-            editingSessionId = id;
-            document.getElementById('modal-title').innerText = "Rename_Node";
-            document.getElementById('session-name').value = oldName;
-            document.getElementById('modal-confirm-btn').onclick = confirmRename;
-            document.getElementById('name-modal').classList.remove('hidden');
-        }
-
-        async function confirmRename() {
-            const name = document.getElementById('session-name').value.toUpperCase();
-            if (name && editingSessionId) {
-                await db.collection("users").doc(currentUser.uid).collection("sessions").doc(editingSessionId).update({ name: name });
-                closeNameModal();
-                refreshArchiveList();
-            }
-        }
-
-        async function confirmArchive() {
-            const name = document.getElementById('session-name').value.toUpperCase() || "UNNAMED_TRIAL";
-            if (currentActiveData) {
-                const archiveData = { ...currentActiveData, name: name, timestamp: firebase.firestore.FieldValue.serverTimestamp() };
-                await db.collection("users").doc(currentUser.uid).collection("sessions").add(archiveData);
-                await db.collection("users").doc(currentUser.uid).collection("sessions").doc("active_session").delete();
-            }
-            auth.signOut().then(() => { window.location.href = "index.html"; });
-        }
-
-        function triggerLogout() {
-            document.getElementById('modal-title').innerText = "Archive_Session";
-            document.getElementById('session-name').value = "";
-            document.getElementById('modal-confirm-btn').onclick = confirmArchive;
-            document.getElementById('name-modal').classList.remove('hidden');
-        }
-
-        function toggleArchiveList(show) { document.getElementById('archive-portal').classList.toggle('hidden', !show); if(show) refreshArchiveList(); }
-        function closeNameModal() { document.getElementById('name-modal').classList.add('hidden'); }
-        function loadSession(data) { currentActiveData = data; syncInputs(data); launchUI(); toggleArchiveList(false); }
-        function syncInputs(d) {
-            document.getElementById('wheel-type').value = d.wheel; document.getElementById('main-domain').value = d.domain;
-            updateSubDomains(); document.getElementById('sub-domain').value = d.sub;
-            updateSubTypes(); document.getElementById('sub-type').value = d.type;
-            document.getElementById('base-unit').value = d.unit;
-            document.getElementById('sync-info').innerHTML = `NODE_SYNCHRONIZED: ${d.name || 'ACTIVE'}<br>PROTOCOL: ${d.type}`;
-        }
-        function updateSubDomains() {
-            const d = document.getElementById('main-domain').value;
-            document.getElementById('sub-domain').innerHTML = Object.keys(lockedMap[d]).map(k => `<option value="${k}">${k.toUpperCase()}</option>`).join('');
-            updateSubTypes();
-        }
-        function updateSubTypes() {
-            const d = document.getElementById('main-domain').value; const s = document.getElementById('sub-domain').value;
-            document.getElementById('sub-type').innerHTML = lockedMap[d][s].map(t => `<option value="${t}">${t}</option>`).join('');
-        }
-        function showConfig() { document.getElementById('entry-portal').classList.add('hidden'); document.getElementById('config-page').classList.remove('hidden'); if(!document.getElementById('sub-domain').innerHTML) updateSubDomains(); }
-        async function saveAndLaunch() {
-            const config = { name: "ACTIVE_SESSION", wheel: document.getElementById('wheel-type').value, domain: document.getElementById('main-domain').value, sub: document.getElementById('sub-domain').value, type: document.getElementById('sub-type').value, unit: document.getElementById('base-unit').value, timestamp: firebase.firestore.FieldValue.serverTimestamp() };
-            currentActiveData = config; await db.collection("users").doc(currentUser.uid).collection("sessions").doc("active_session").set(config); launchUI();
-        }
-        function launchUI() { document.getElementById('entry-portal').classList.add('hidden'); document.getElementById('config-page').classList.add('hidden'); document.getElementById('tracker-temp').classList.remove('hidden'); }
-    </script>
-</body>
-</html>
+// INITIALIZE
+document.addEventListener('DOMContentLoaded', () => {
+    syncWheelSubtypes();
+    syncSubCategories();
+});
+</script>
