change after seperation

--- a/lobby.html
+++ b/lobby.html
@@ -96,11 +96,11 @@
                 <div class="text-[10px] font-bold text-emerald-400 tracking-[0.3em] uppercase border-t border-emerald-900/30 pt-4">Enter Node &rarr;</div>
             </div>
 
-            <div class="shard-card p-8 rounded-sm cursor-pointer group border-emerald-500/50" onclick="window.location.href='roulette.html'">
+            <div class="shard-card p-8 rounded-sm cursor-pointer group border-emerald-500/50" onclick="window.location.href='roulette-config.html'">
                 <div class="text-4xl mb-6 grayscale group-hover:grayscale-0 transition-all duration-500">🎡</div>
                 <h3 class="text-xl font-black mb-3 uppercase tracking-wider group-hover:emerald-text transition-colors">Strategic Engine</h3>
-                <p class="text-slate-400 text-xs leading-relaxed mb-8 font-serif italic">Advanced Alpha logic. Staircase recovery and independent unit tracking active.</p>
-                <div class="text-[10px] font-bold text-emerald-400 tracking-[0.3em] uppercase border-t border-emerald-900/30 pt-4">Begin Session &rarr;</div>
+                <p class="text-slate-400 text-xs leading-relaxed mb-8 font-serif italic">Advanced Alpha logic. Calibration of Wheel Physics and Sector Domains required.</p>
+                <div class="text-[10px] font-bold text-emerald-400 tracking-[0.3em] uppercase border-t border-emerald-900/30 pt-4">Calibrate Node &rarr;</div>
             </div>
 
             <div class="shard-card p-8 rounded-sm opacity-50 grayscale relative overflow-hidden">
@@ -113,6 +113,5 @@
 
         </div>
     </main>
-
 </body>
 </html>
